# keeldb

./: .gitignore  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  desktop.yml
backend/: build_sidecar.ps1  build_sidecar.sh  migration-backend.spec  requirements.txt  run_server.py
backend/app/: activity.py  admin.py  advisor.py  ai.py  alerts.py  auth.py  backup.py  bloat.py  dbops.py  duplicates.py  explain.py  health.py  main.py  metrics.py  models.py  portable.py  profiler.py  projects.py  relational.py  rollback.py  runner.py  sandbox.py  schemagen.py  sinks.py  snapshots.py  supabase_admin.py  supabase_auth.py  users.py  verify.py
backend/tests/: conftest.py  test_activity.py  test_admin.py  test_advisor.py  test_ai.py  test_alerts.py  test_auth.py  test_backup.py  test_bloat_resume.py  test_dbops.py  test_diagrams.py  test_duplicates.py  test_explain.py  (+22 more)
docs/: DESKTOP.md  index.html  mig.md  mig2.md  mig3.md
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: README.md
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: README.md
frontend/src-tauri/metainfo/: com.keeldb.user.metainfo.xml  net.fiberathome.keeldb.metainfo.xml
frontend/src-tauri/src/: lib.rs  main.rs
screenshots/: README.md
scripts/: create_supabase_users.py
(+141 files in other folders)
