[package]
name = "migration-studio"
version = "0.1.0"
description = "DB Migration Studio desktop"
edition = "2021"

[lib]
name = "migration_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
